--- a/languages/iBiblia.en.po
+++ b/languages/iBiblia.en.po
@@ -1,15 +1,15 @@
 msgid ""
 msgstr ""
-"Content-Type: text/plain; charset=UTF-8\n"
 "Project-Id-Version: \n"
 "POT-Creation-Date: \n"
 "PO-Revision-Date: \n"
 "Last-Translator: \n"
 "Language-Team: \n"
-"MIME-Version: 1.0\n"
-"Content-Transfer-Encoding: 8bit\n"
 "Language: en\n"
-"X-Generator: Poedit 2.4.2\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Poedit 3.3.2\n"
 
 #: chapterview.schapterbeginning
 msgid "Beginning of chapter"
@@ -43,7 +43,7 @@ msgstr "Previous chapter"
 
 #: chapterview.sprintchapter
 msgid "Print chapter"
-msgstr "Print chapter..."
+msgstr "Print chapter"
 
 #: chapterview.ssetfont
 msgid "Choose &font..."
@@ -180,7 +180,7 @@ msgid "Open project"
 msgstr "Open project"
 
 #: formprincipal.sprojectfiledoesnotexist
-#, fuzzy, object-pascal-format
+#, object-pascal-format
 #| msgid ""
 #| "The selected project file doesn't exist:\n"
 #| "%s\n"
@@ -189,7 +189,7 @@ msgid ""
 "%s"
 msgstr ""
 "The selected project file doesn't exist:\n"
-"%s\n"
+"%s"
 
 #: formprincipal.sreference1
 msgid "reference 1"
@@ -250,7 +250,6 @@ msgid "Are you sure you want to replace this Bible text with a new one?"
 msgstr "Are you sure you want to replace this text with a new one?"
 
 #: formpropprojeto.schangetextconfirmationassociation
-#, fuzzy
 #| msgid ""
 #| "Loading a new Bible text will cause all your existing associations to be discarded. But, if you click 'Yes', iBiblia can try to keep existing associations for you.\n"
 #| "\n"
@@ -260,9 +259,9 @@ msgid ""
 "\n"
 "Would you like iBiblia to do that?"
 msgstr ""
-"Loading a new text will cause all your existing associations to be discarded. But, if you click 'Yes', iBiblia can try to keep existing associations for you.\n"
+"Loading a new Bible text will cause all your existing associations to be discarded. But, if you click 'Yes', iBiblia can try to keep existing associations for you.\n"
 "\n"
-"Would you like iBiblia to do that?\n"
+"Would you like iBiblia to do that?"
 
 #: formpropprojeto.schooseabiblemodule
 msgid "Please choose a theWord Bible module file..."
@@ -287,7 +286,6 @@ msgid "Are you sure you want to clear this Bible text?"
 msgstr "Are you sure you want to clear this text?"
 
 #: formpropprojeto.scleartextconfirmationassociation
-#, fuzzy
 #| msgid ""
 #| "Are you sure you want to clear this Bible text?\n"
 #| "All your associations will be lost!\n"
@@ -295,8 +293,8 @@ msgid ""
 "Are you sure you want to clear this Bible text?\n"
 "All your associations will be lost!"
 msgstr ""
-"Are you sure you want to clear this text?\n"
-"All your associations will be lost!\n"
+"Are you sure you want to clear this Bible text?\n"
+"All your associations will be lost!"
 
 #: formpropprojeto.sdestinationtab
 msgctxt "formpropprojeto.sdestinationtab"
@@ -482,7 +480,6 @@ msgid "Confirmation"
 msgstr "Confirmation"
 
 #: projeto.scorrupteddata
-#, fuzzy
 #| msgid ""
 #| "Corrupted data, some associations may be lost.This can happen for several reasons:\n"
 #| " 1. The project file was modified outside iBiblia\n"
@@ -503,7 +500,7 @@ msgstr ""
 " 2. The project was created/edited on an incompatible iBiblia version\n"
 " 3. This can be a bug in iBiblia.\n"
 "    If this is the case, please file a bug in the Github project page\n"
-"    at https://github.com/rubiot/ibiblia.\n"
+"    at https://github.com/rubiot/ibiblia."
 
 #: projeto.sdaniel
 msgctxt "projeto.sdaniel"
@@ -553,16 +550,11 @@ msgid "Please choose a destination file"
 msgstr "Please choose a destination file"
 
 #: projeto.sexporttofileerror
-#, fuzzy
 #| msgid ""
 #| "iBiblia found an error while exporting the Bible module file.\n"
 #| "Please check if theWord is using the file, then close it and try again.\n"
-msgid ""
-"iBiblia found an error while exporting the Bible module file.\n"
-"Please check if theWord is using the file, then close it and try again."
-msgstr ""
-"iBiblia found an error while exporting the Bible module file.\n"
-"Please check if theWord is using the file, then close it and try again.\n"
+msgid "iBiblia found an error while exporting the Bible module file."
+msgstr "iBiblia found an error while exporting the Bible module file."
 
 #: projeto.sezekiel
 msgctxt "projeto.sezekiel"
@@ -619,7 +611,6 @@ msgid "Information"
 msgstr "Information"
 
 #: projeto.sinterlinearverserulereplaceerror
-#, fuzzy
 #| msgid ""
 #| "There is something wrong with one of your interlinear verse rules.\n"
 #| "Please review them.\n"
@@ -628,10 +619,9 @@ msgid ""
 "Please review them."
 msgstr ""
 "There is something wrong with one of your interlinear verse rules.\n"
-"Please review them.\n"
+"Please review them."
 
 #: projeto.sinvalidcompresseddictionary
-#, fuzzy
 #| msgid ""
 #| "iBiblia does not suppport compressed dictionaries yet.\n"
 #| "Please choose an uncompressed module.\n"
@@ -640,10 +630,9 @@ msgid ""
 "Please choose an uncompressed module."
 msgstr ""
 "iBiblia does not suppport compressed dictionaries yet.\n"
-"Please choose an uncompressed module.\n"
+"Please choose an uncompressed module."
 
 #: projeto.sinvalidencrypteddictionary
-#, fuzzy
 #| msgid ""
 #| "iBiblia does not and will not support encrypted modules.\n"
 #| "Please choose an unencrypted module.\n"
@@ -652,10 +641,10 @@ msgid ""
 "Please choose an unencrypted module."
 msgstr ""
 "iBiblia does not and will not support encrypted modules.\n"
-"Please choose an unencrypted module.\n"
+"Please choose an unencrypted module."
 
 #: projeto.sinvalidinterlinearverserule
-#, fuzzy, object-pascal-format
+#, object-pascal-format
 #| msgid ""
 #| "There is something wrong with your interlinear verse rule.\n"
 #| "[%s]\n"
@@ -664,7 +653,7 @@ msgid ""
 "[%s]"
 msgstr ""
 "There is something wrong with your interlinear verse rule.\n"
-"[%s]\n"
+"[%s]"
 
 #: projeto.sinvalidlinecount
 #, object-pascal-format
@@ -676,7 +665,6 @@ msgid "Unknown module extension. Please choose a valid theWord Bible module (.ot
 msgstr "Unknown module extension. Please choose a valid theWord Bible module (.ot, .ont or .nt)"
 
 #: projeto.sinvalidmorphologydictionary
-#, fuzzy
 #| msgid ""
 #| "This is not a morphology dictionary.\n"
 #| "Please choose a valid morphology dictionary.\n"
@@ -685,10 +673,9 @@ msgid ""
 "Please choose a valid morphology dictionary."
 msgstr ""
 "This is not a morphology dictionary.\n"
-"Please choose a valid morphology dictionary.\n"
+"Please choose a valid morphology dictionary."
 
 #: projeto.sinvalidnonrtfdictionary
-#, fuzzy
 #| msgid ""
 #| "iBiblia only suppports RTF modules.\n"
 #| "Please choose another module or convert this module to RTF in theWord.\n"
@@ -697,10 +684,9 @@ msgid ""
 "Please choose another module or convert this module to RTF in theWord."
 msgstr ""
 "iBiblia only suppports RTF modules.\n"
-"Please choose another module or convert this module to RTF in theWord.\n"
+"Please choose another module or convert this module to RTF in theWord."
 
 #: projeto.sinvalidstrongsdictionary
-#, fuzzy
 #| msgid ""
 #| "This is not a Strong's dictionary.\n"
 #| "Please choose a valid Strong's dictionary.\n"
@@ -709,7 +695,7 @@ msgid ""
 "Please choose a valid Strong's dictionary."
 msgstr ""
 "This is not a Strong's dictionary.\n"
-"Please choose a valid Strong's dictionary.\n"
+"Please choose a valid Strong's dictionary."
 
 #: projeto.sisaiah
 msgctxt "projeto.sisaiah"
@@ -887,7 +873,7 @@ msgid "Reference not found"
 msgstr "Reference not found"
 
 #: projeto.sreferencenotfoundwarning
-#, fuzzy, object-pascal-format
+#, object-pascal-format
 #| msgid ""
 #| "The reference %s is not a valid reference in this project and will be ignored.\n"
 #| "Press Ignore to ignore all subsequent warnings.\n"
@@ -896,7 +882,7 @@ msgid ""
 "Press Ignore to ignore all subsequent warnings."
 msgstr ""
 "The reference %s is not a valid reference in this project and will be ignored.\n"
-"Press Ignore to ignore all subsequent warnings.\n"
+"Press Ignore to ignore all subsequent warnings."
 
 #: projeto.srevelation
 msgctxt "projeto.srevelation"
@@ -1736,7 +1722,6 @@ msgid "Exit the program"
 msgstr "Exit the program"
 
 #: twautomate.stwsynchronizationerror
-#, fuzzy
 #| msgid ""
 #| "Failed to detect theWord's current verse.\n"
 #| "Please restart theWord if you have switched its current language.\n"
@@ -1745,7 +1730,7 @@ msgid ""
 "Please restart theWord if you have switched its current language."
 msgstr ""
 "Failed to detect theWord's current verse.\n"
-"Please restart theWord if you have switched its current language.\n"
+"Please restart theWord if you have switched its current language."
 
 #: twautomate.stwsynchronizationerrortitle
 msgid "Synchronization error"
